--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Veronica Lake, UCF Coding Bootcamp, Module 5 project-->
     <!-- Meta Data for SEO -->
 	<meta charset="UTF-8" />
+    <meta name="description" content="Workday Scheduler, calendar">
+    <meta name="keywords" content="Workday Scheduler, calendar">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
